feat(doc): #5 extend readme
- Extend readme
- Add new markdown jobs

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -67,6 +67,16 @@ jobs:
           set-safe-directory: "/github/workspace"
           args: m . /lintGitMailMap
 
+  lintMarkdown_readme:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
+      - uses: docker://ghcr.io/fluidattacks/makes:22.06
+        name: /lintMarkdown/readme
+        with:
+          set-safe-directory: "/github/workspace"
+          args: m . /lintMarkdown/readme
+
   lintNix:
     runs-on: ubuntu-latest
     steps:
