feat(build): #7 add cache
- Add cache config
- Remove all job
- Add prod pipeline

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -106,7 +106,7 @@ jobs:
         with:
           set-safe-directory: "/github/workspace"
           args: m . /securePythonWithBandit/api
-name: dev
+name: prod
 on:
-  pull_request:
+  push:
     branches: [main]
