--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -3,6 +3,20 @@ concurrency:
   cancel-in-progress: true
   group: ${{ github.actor }}
 jobs:
+  formatBash:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
+        with:
+          fetch-depth: 0
+      - uses: docker://ghcr.io/fluidattacks/makes:22.07
+        name: /formatBash
+        with:
+          set-safe-directory: "/github/workspace"
+          args: m . /formatBash
+        env:
+          CACHIX_AUTH_TOKEN: ${{ secrets.CACHIX_AUTH_TOKEN }}
+
   formatMarkdown:
     runs-on: ubuntu-latest
     steps:
@@ -36,6 +50,20 @@ jobs:
         with:
           set-safe-directory: "/github/workspace"
           args: m . /formatPython
+        env:
+          CACHIX_AUTH_TOKEN: ${{ secrets.CACHIX_AUTH_TOKEN }}
+
+  lintBash:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
+        with:
+          fetch-depth: 0
+      - uses: docker://ghcr.io/fluidattacks/makes:22.07
+        name: /lintBash
+        with:
+          set-safe-directory: "/github/workspace"
+          args: m . /lintBash
         env:
           CACHIX_AUTH_TOKEN: ${{ secrets.CACHIX_AUTH_TOKEN }}
 
