--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -3,6 +3,21 @@ concurrency:
   cancel-in-progress: true
   group: ${{ github.actor }}
 jobs:
+  api_deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
+        with:
+          fetch-depth: 0
+      - uses: docker://ghcr.io/fluidattacks/makes:22.07
+        name: /api/deploy
+        with:
+          set-safe-directory: "/github/workspace"
+          args: m . /api/deploy
+        env:
+          STACKHERO_SERVICE_ID: ${{ secrets.STACKHERO_SERVICE_ID }}
+          STACKHERO_PASSWORD: ${{ secrets.STACKHERO_PASSWORD }}
+
   formatBash:
     runs-on: ubuntu-latest
     steps:
