feat(build): #10 support prod
- Add logic for supporting prod deployment

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -13,7 +13,7 @@ jobs:
         name: /api/deploy
         with:
           set-safe-directory: "/github/workspace"
-          args: m . /api/deploy
+          args: m . /api/deploy dev
         env:
           STACKHERO_SERVICE_ID: ${{ secrets.STACKHERO_SERVICE_ID }}
           STACKHERO_PASSWORD: ${{ secrets.STACKHERO_PASSWORD }}
