--- a/api/deploy/compose.yaml
+++ b/api/deploy/compose.yaml
@@ -4,14 +4,14 @@ services:
     image: ghcr.io/fluidattacks/makes:22.07
     entrypoint:
       - "m"
-      - "github:${USER}/makes-example@main"
+      - "github:${BRANCH}/makes-example@main"
       - "/api"
-      - "${USER}"
+      - "${BRANCH}"
     ports:
       - "8080"
     labels:
       - "traefik.enable=true"
-      - "traefik.http.middlewares.makes-example-${USER}.stripprefix.prefixes=/${USER}"
-      - "traefik.http.routers.makes-example-${USER}.tls.certresolver=letsencrypt"
-      - "traefik.http.routers.makes-example-${USER}.rule=Host(`yuaaxr.stackhero-network.com`) && PathPrefix(`/${USER}`)"
-      - "traefik.http.routers.makes-example-${USER}.middlewares=makes-example-${USER}"
+      - "traefik.http.middlewares.makes-example-${BRANCH}.stripprefix.prefixes=/${BRANCH}"
+      - "traefik.http.routers.makes-example-${BRANCH}.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.makes-example-${BRANCH}.rule=Host(`yuaaxr.stackhero-network.com`) && PathPrefix(`/${BRANCH}`)"
+      - "traefik.http.routers.makes-example-${BRANCH}.middlewares=makes-example-${BRANCH}"
