--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,3 +1,4 @@
+---
 permissions: read-all
 concurrency:
   cancel-in-progress: true
@@ -9,10 +10,10 @@ jobs:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
         with:
           fetch-depth: 0
-      - uses: docker://ghcr.io/fluidattacks/makes:22.07
+      - uses: docker://ghcr.io/fluidattacks/makes:22.08
         name: /api/deploy
         with:
-          set-safe-directory: "/github/workspace"
+          set-safe-directory: /github/workspace
           args: m . /api/deploy dev
         env:
           STACKHERO_SERVICE_ID: ${{ secrets.STACKHERO_SERVICE_ID }}
@@ -24,40 +25,40 @@ jobs:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
         with:
           fetch-depth: 0
-      - uses: docker://ghcr.io/fluidattacks/makes:22.07
+      - uses: docker://ghcr.io/fluidattacks/makes:22.08
         name: /formatBash
         with:
-          set-safe-directory: "/github/workspace"
+          set-safe-directory: /github/workspace
           args: m . /formatBash
 
   formatMarkdown:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
-      - uses: docker://ghcr.io/fluidattacks/makes:22.07
+      - uses: docker://ghcr.io/fluidattacks/makes:22.08
         name: /formatMarkdown
         with:
-          set-safe-directory: "/github/workspace"
+          set-safe-directory: /github/workspace
           args: m . /formatMarkdown
 
   formatNix:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
-      - uses: docker://ghcr.io/fluidattacks/makes:22.07
+      - uses: docker://ghcr.io/fluidattacks/makes:22.08
         name: /formatNix
         with:
-          set-safe-directory: "/github/workspace"
+          set-safe-directory: /github/workspace
           args: m . /formatNix
 
   formatPython:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
-      - uses: docker://ghcr.io/fluidattacks/makes:22.07
+      - uses: docker://ghcr.io/fluidattacks/makes:22.08
         name: /formatPython
         with:
-          set-safe-directory: "/github/workspace"
+          set-safe-directory: /github/workspace
           args: m . /formatPython
 
   lintBash:
@@ -66,10 +67,10 @@ jobs:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
         with:
           fetch-depth: 0
-      - uses: docker://ghcr.io/fluidattacks/makes:22.07
+      - uses: docker://ghcr.io/fluidattacks/makes:22.08
         name: /lintBash
         with:
-          set-safe-directory: "/github/workspace"
+          set-safe-directory: /github/workspace
           args: m . /lintBash
 
   lintGitCommitMsg:
@@ -78,10 +79,10 @@ jobs:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
         with:
           fetch-depth: 0
-      - uses: docker://ghcr.io/fluidattacks/makes:22.07
+      - uses: docker://ghcr.io/fluidattacks/makes:22.08
         name: /lintGitCommitMsg
         with:
-          set-safe-directory: "/github/workspace"
+          set-safe-directory: /github/workspace
           args: m . /lintGitCommitMsg
 
   lintGitMailMap:
@@ -90,60 +91,60 @@ jobs:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
         with:
           fetch-depth: 0
-      - uses: docker://ghcr.io/fluidattacks/makes:22.07
+      - uses: docker://ghcr.io/fluidattacks/makes:22.08
         name: /lintGitMailMap
         with:
-          set-safe-directory: "/github/workspace"
+          set-safe-directory: /github/workspace
           args: m . /lintGitMailMap
 
   lintMarkdown_readme:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
-      - uses: docker://ghcr.io/fluidattacks/makes:22.07
+      - uses: docker://ghcr.io/fluidattacks/makes:22.08
         name: /lintMarkdown/readme
         with:
-          set-safe-directory: "/github/workspace"
+          set-safe-directory: /github/workspace
           args: m . /lintMarkdown/readme
 
   lintNix:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
-      - uses: docker://ghcr.io/fluidattacks/makes:22.07
+      - uses: docker://ghcr.io/fluidattacks/makes:22.08
         name: /lintNix
         with:
-          set-safe-directory: "/github/workspace"
+          set-safe-directory: /github/workspace
           args: m . /lintNix
 
   lintPython_module_api:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
-      - uses: docker://ghcr.io/fluidattacks/makes:22.07
+      - uses: docker://ghcr.io/fluidattacks/makes:22.08
         name: /lintPython/module/api
         with:
-          set-safe-directory: "/github/workspace"
+          set-safe-directory: /github/workspace
           args: m . /lintPython/module/api
 
   lintWithLizard_api:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
-      - uses: docker://ghcr.io/fluidattacks/makes:22.07
+      - uses: docker://ghcr.io/fluidattacks/makes:22.08
         name: /lintWithLizard/api
         with:
-          set-safe-directory: "/github/workspace"
+          set-safe-directory: /github/workspace
           args: m . /lintWithLizard/api
 
   securePythonWithBandit_api:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
-      - uses: docker://ghcr.io/fluidattacks/makes:22.07
+      - uses: docker://ghcr.io/fluidattacks/makes:22.08
         name: /securePythonWithBandit/api
         with:
-          set-safe-directory: "/github/workspace"
+          set-safe-directory: /github/workspace
           args: m . /securePythonWithBandit/api
 name: dev
 on:
