--- a/api/deploy/compose.yaml
+++ b/api/deploy/compose.yaml
@@ -1,23 +1,25 @@
-version: "3.8"
+---
+version: '3.8'
 networks:
   app:
     name: app
     external: true
 services:
   app:
-    image: ghcr.io/fluidattacks/makes:22.07
+    image: ghcr.io/fluidattacks/makes:22.08
     hostname: makes-example-${BRANCH}
     container_name: makes-example-${BRANCH}
     networks: [app]
-    ports: ["8080"]
+    ports: ['8080']
     entrypoint:
-      - "m"
-      - "github:fluidattacks/makes-example@${BRANCH}"
-      - "/api"
-      - "${PATH_PREFIX}"
+      - m
+      - github:fluidattacks/makes-example@${BRANCH}
+      - /api
+      - ${PATH_PREFIX}
     labels:
-      - "traefik.enable=true"
-      - "traefik.http.middlewares.makes-example-${BRANCH}.stripprefix.prefixes=${PATH_PREFIX}"
-      - "traefik.http.routers.makes-example-${BRANCH}.tls.certresolver=letsencrypt"
-      - "traefik.http.routers.makes-example-${BRANCH}.rule=Host(`makes.fluidattacks.com`) && PathPrefix(`${PATH_PREFIX}`)"
-      - "traefik.http.routers.makes-example-${BRANCH}.middlewares=makes-example-${BRANCH}"
+      - traefik.enable=true
+      - traefik.http.middlewares.makes-example-${BRANCH}.stripprefix.prefixes=${PATH_PREFIX}
+      - traefik.http.routers.makes-example-${BRANCH}.tls.certresolver=letsencrypt
+      - traefik.http.routers.makes-example-${BRANCH}.rule=Host(`makes.fluidattacks.com`)
+        && PathPrefix(`${PATH_PREFIX}`)
+      - traefik.http.routers.makes-example-${BRANCH}.middlewares=makes-example-${BRANCH}
