--- a/api/deploy/compose.yaml
+++ b/api/deploy/compose.yaml
@@ -6,7 +6,7 @@ networks:
     external: true
 services:
   app:
-    image: ghcr.io/fluidattacks/makes:22.11
+    image: ghcr.io/fluidattacks/makes/amd64:latest
     hostname: makes-example-${BRANCH}
     container_name: makes-example-${BRANCH}
     networks: [app]
